Remove vitest job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,26 +49,27 @@ jobs:
       - name: 🔎 Type check
         run: npm run typecheck --if-present
 
-  vitest:
-    name: ⚡ Vitest
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-
-      - name: ⎔ Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: 📥 Download deps
-        uses: bahmutov/npm-install@v1
-
-      - name: ⚡ Run vitest
-        run: npm run test -- --coverage
+#TODO: Add back once there is a unit test
+#  vitest:
+#    name: ⚡ Vitest
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: 🛑 Cancel Previous Runs
+#        uses: styfle/cancel-workflow-action@0.9.1
+#
+#      - name: ⬇️ Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: ⎔ Setup node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#
+#      - name: 📥 Download deps
+#        uses: bahmutov/npm-install@v1
+#
+#      - name: ⚡ Run vitest
+#        run: npm run test -- --coverage
 
   cypress:
     name: ⚫️ Cypress
