--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,60 @@ jobs:
       - name: 🔎 Type check
         run: npm run typecheck --if-present
 
+#TODO: Add back once there is a unit and e2e test
+#  vitest:
+#    name: ⚡ Vitest
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: 🛑 Cancel Previous Runs
+#        uses: styfle/cancel-workflow-action@0.9.1
+#
+#      - name: ⬇️ Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: ⎔ Setup node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#
+#      - name: 📥 Download deps
+#        uses: bahmutov/npm-install@v1
+#
+#      - name: ⚡ Run vitest
+#        run: npm run test -- --coverage
+
+#  cypress:
+#    name: ⚫️ Cypress
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: 🛑 Cancel Previous Runs
+#        uses: styfle/cancel-workflow-action@0.9.1
+#
+#      - name: ⬇️ Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: 🏄 Copy test env vars
+#        run: cp .env.example .env
+#
+#      - name: ⎔ Setup node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#
+#      - name: 📥 Download deps
+#        uses: bahmutov/npm-install@v1
+#
+#      - name: ⚙️ Build
+#        run: npm run build
+#
+#      - name: 🌳 Cypress run
+#        uses: cypress-io/github-action@v3
+#        with:
+#          start: npm run start:mocks
+#          wait-on: "http://localhost:8811"
+#        env:
+#          PORT: "8811"
+
   build:
     name: 🐳 Build
     # only build/deploy main branch on pushes
@@ -108,39 +162,40 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  deploy:
-    name: 🚀 Deploy
-    runs-on: ubuntu-latest
-    needs: [lint, typecheck, vitest, cypress, build]
-    # only build/deploy main branch on pushes
-    if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
-
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-
-      - name: 👀 Read app name
-        uses: SebRollen/toml-action@v1.0.0
-        id: app_name
-        with:
-          file: "fly.toml"
-          field: "app"
-
-      - name: 🚀 Deploy Staging
-        if: ${{ github.ref == 'refs/heads/dev' }}
-        uses: superfly/flyctl-actions@1.3
-        with:
-          args: "deploy --app ${{ steps.app_name.outputs.value }}-staging --image registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}"
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-      - name: 🚀 Deploy Production
-        if: ${{ github.ref == 'refs/heads/main' }}
-        uses: superfly/flyctl-actions@1.3
-        with:
-          args: "deploy --image registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}"
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+# TODO: Needs to set a deploy environment
+#  deploy:
+#    name: 🚀 Deploy
+#    runs-on: ubuntu-latest
+#    needs: [lint, typecheck, build]
+#    # only build/deploy main branch on pushes
+#    if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
+#
+#    steps:
+#      - name: 🛑 Cancel Previous Runs
+#        uses: styfle/cancel-workflow-action@0.9.1
+#
+#      - name: ⬇️ Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: 👀 Read app name
+#        uses: SebRollen/toml-action@v1.0.0
+#        id: app_name
+#        with:
+#          file: "fly.toml"
+#          field: "app"
+#
+#      - name: 🚀 Deploy Staging
+#        if: ${{ github.ref == 'refs/heads/dev' }}
+#        uses: superfly/flyctl-actions@1.3
+#        with:
+#          args: "deploy --app ${{ steps.app_name.outputs.value }}-staging --image registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}"
+#        env:
+#          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+#
+#      - name: 🚀 Deploy Production
+#        if: ${{ github.ref == 'refs/heads/main' }}
+#        uses: superfly/flyctl-actions@1.3
+#        with:
+#          args: "deploy --image registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}"
+#        env:
+#          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
