--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "/public/build"
   ],
   "dependencies": {
-    "@remix-run/node": "^1.3.5",
-    "@remix-run/react": "^1.3.5",
-    "@remix-run/serve": "^1.3.5",
-    "@remix-run/server-runtime": "^1.3.5",
+    "@remix-run/node": "^1.4.0",
+    "@remix-run/react": "^1.4.0",
+    "@remix-run/serve": "^1.4.0",
+    "@remix-run/vercel": "^1.4.0",
+    "@remix-run/server-runtime": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
