--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indie-stack-template",
+  "name": "awesome-github",
   "private": true,
   "description": "",
   "license": "",
@@ -11,20 +11,16 @@
     "build:remix": "remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
+    "dev:remix": "NODE_ENV=development remix dev",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
-    "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"cypress open\"",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"cypress run\"",
-    "typecheck": "tsc -b && tsc -b cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "typecheck": "tsc -b",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -35,19 +31,14 @@
   "dependencies": {
     "@remix-run/node": "^1.4.0",
     "@remix-run/react": "^1.4.0",
-    "@remix-run/serve": "^1.4.0",
     "@remix-run/vercel": "^1.4.0",
-    "@remix-run/server-runtime": "^1.4.0",
-    "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tiny-invariant": "^1.2.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@faker-js/faker": "^6.1.1",
-    "@remix-run/dev": "^1.3.5",
-    "@remix-run/eslint-config": "^1.3.5",
+    "@remix-run/dev": "^1.4.0",
+    "@remix-run/eslint-config": "^1.4.0",
+    "@remix-run/serve": "^1.4.0",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
@@ -65,24 +56,17 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.4",
-    "babel-loader": "^8.2.4",
-    "binode": "^1.0.5",
-    "c8": "^7.11.0",
-    "cross-env": "^7.0.3",
-    "cypress": "^9.5.3",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.8",
     "happy-dom": "^2.55.0",
-    "msw": "^0.39.2",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
     "prettier": "2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
-    "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.1",
@@ -91,5 +75,9 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
