--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,28 +49,28 @@ jobs:
       - name: 🔎 Type check
         run: npm run typecheck --if-present
 
-  #TODO: Add back once there is a unit and e2e test
-  #  vitest:
-  #    name: ⚡ Vitest
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - name: 🛑 Cancel Previous Runs
-  #        uses: styfle/cancel-workflow-action@0.9.1
-  #
-  #      - name: ⬇️ Checkout repo
-  #        uses: actions/checkout@v3
-  #
-  #      - name: ⎔ Setup node
-  #        uses: actions/setup-node@v3
-  #        with:
-  #          node-version: 16
-  #
-  #      - name: 📥 Download deps
-  #        uses: bahmutov/npm-install@v1
-  #
-  #      - name: ⚡ Run vitest
-  #        run: npm run test -- --coverage
+  vitest:
+    name: ⚡ Vitest
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
 
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+
+      - name: ⚡ Run vitest
+        run: npm run test -- --coverage
+
+  #TODO: Add back once there is at lease one e2e test
   #  cypress:
   #    name: ⚫️ Cypress
   #    runs-on: ubuntu-latest
@@ -103,64 +103,64 @@ jobs:
   #        env:
   #          PORT: "8811"
 
-  build:
-    name: 🐳 Build
-    # only build/deploy main branch on pushes
-    if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-
-      - name: 👀 Read app name
-        uses: SebRollen/toml-action@v1.0.0
-        id: app_name
-        with:
-          file: "fly.toml"
-          field: "app"
-
-      - name: 🐳 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      # Setup cache
-      - name: ⚡️ Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: 🔑 Fly Registry Auth
-        uses: docker/login-action@v1
-        with:
-          registry: registry.fly.io
-          username: x
-          password: ${{ secrets.FLY_API_TOKEN }}
-
-      - name: 🐳 Docker build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}
-          build-args: |
-            COMMIT_SHA=${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
-
-      # This ugly bit is necessary if you don't want your cache to grow forever
-      # till it hits GitHub's limit of 5GB.
-      # Temp fix
-      # https://github.com/docker/build-push-action/issues/252
-      # https://github.com/moby/buildkit/issues/1896
-      - name: 🚚 Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+#  build:
+#    name: 🐳 Build
+#    # only build/deploy main branch on pushes
+#    if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: 🛑 Cancel Previous Runs
+#        uses: styfle/cancel-workflow-action@0.9.1
+#
+#      - name: ⬇️ Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: 👀 Read app name
+#        uses: SebRollen/toml-action@v1.0.0
+#        id: app_name
+#        with:
+#          file: "fly.toml"
+#          field: "app"
+#
+#      - name: 🐳 Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#
+#      # Setup cache
+#      - name: ⚡️ Cache Docker layers
+#        uses: actions/cache@v2
+#        with:
+#          path: /tmp/.buildx-cache
+#          key: ${{ runner.os }}-buildx-${{ github.sha }}
+#          restore-keys: |
+#            ${{ runner.os }}-buildx-
+#
+#      - name: 🔑 Fly Registry Auth
+#        uses: docker/login-action@v1
+#        with:
+#          registry: registry.fly.io
+#          username: x
+#          password: ${{ secrets.FLY_API_TOKEN }}
+#
+#      - name: 🐳 Docker build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: registry.fly.io/${{ steps.app_name.outputs.value }}:${{ github.ref_name }}-${{ github.sha }}
+#          build-args: |
+#            COMMIT_SHA=${{ github.sha }}
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+#
+#      # This ugly bit is necessary if you don't want your cache to grow forever
+#      # till it hits GitHub's limit of 5GB.
+#      # Temp fix
+#      # https://github.com/docker/build-push-action/issues/252
+#      # https://github.com/moby/buildkit/issues/1896
+#      - name: 🚚 Move cache
+#        run: |
+#          rm -rf /tmp/.buildx-cache
+#          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
 # TODO: Needs to set a deploy environment
 #  deploy:
