--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "react-router-dom": "^6.3.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
     "tsconfig-paths": "^3.14.1",
