--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@remix-run/node": "^1.4.0",
     "@remix-run/react": "^1.4.0",
     "@remix-run/vercel": "^1.4.0",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -57,18 +58,18 @@
     "@types/react-dom": "^17.0.14",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-storybook": "^0.5.8",
+    "eslint-config-kentcdodds": "^20.2.0",
     "happy-dom": "^2.55.0",
     "husky": ">=6",
     "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "react-router-dom": "^6.3.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "vite": "^2.9.1",
     "vite-tsconfig-paths": "^3.4.1",
     "vitest": "^0.8.2"
