--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@remix-run/react": "^1.4.0",
     "@remix-run/vercel": "^1.4.0",
     "clsx": "^1.1.1",
+    "downshift": "^6.1.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.15.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.0",
@@ -56,6 +58,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.12.0",
     "eslint-config-kentcdodds": "^20.2.0",
