--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "/public/build"
   ],
   "dependencies": {
+    "@apollo/client": "^3.6.6",
     "@remix-run/node": "^1.4.0",
     "@remix-run/react": "^1.4.0",
     "@remix-run/vercel": "^1.4.0",
     "clsx": "^1.1.1",
     "downshift": "^6.1.7",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.15.1"
