--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="file:./data.db?connection_limit=1"
-SESSION_SECRET="super-duper-s3cret"
+GITHUB_API_TOKEN=""
+GRAPHQL_ENDPOINT="https://api.github.com/graphql"
