--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
+    "generate": "graphql-codegen --config codegen.yml -r dotenv/config",
     "postinstall": "remix setup node",
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
@@ -30,6 +31,7 @@
   ],
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@remix-run/node": "^1.4.0",
     "@remix-run/react": "^1.4.0",
     "@remix-run/vercel": "^1.4.0",
@@ -41,6 +43,10 @@
     "react-modal": "^3.15.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.13",
+    "@graphql-codegen/typescript": "^2.5.1",
+    "@graphql-codegen/typescript-operations": "^2.4.2",
     "@remix-run/dev": "^1.4.0",
     "@remix-run/eslint-config": "^1.4.0",
     "@remix-run/serve": "^1.4.0",
