add codegen as build step

--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "generate": "graphql-codegen --config codegen.yml -r dotenv/config",
     "postinstall": "remix setup node",
     "build": "run-s build:*",
+    "build:generate": "npm run generate:codegen",
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
     "dev": "run-p dev:*",
+    "dev:codegen": "npm run generate:codegen -- --watch",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "NODE_ENV=development remix dev",
     "format": "prettier --write .",
+    "generate:codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
